# OmicsClaw

./: .env.example  .gitignore  .mintignore  0_build_vendored_tools.sh  0_setup_env.sh  AGENTS.md  BOT_LIMITS_OPTIMIZATION.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  MEMORY_INTEGRATION_COMPLETE.md  Makefile  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  README.md  README_zh-CN.md  SOUL.md  SPEC.md  environment.yml  install_r_dependencies.R  llms.txt  mint.json  omicsclaw.py  pyproject.toml  requirements.txt
.github/workflows/: claude-code-review.yml  deploy-website.yml  eval-nightly.yml  pr-ci.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
bot/: CHANNELS_SETUP.md  FEISHU_SETUP.md  README.md  TELEGRAM_SETUP.md  __init__.py  agent_loop.py  audit.py  billing.py  core.py  feishu_bot.py  onboard.py  path_validation.py  preflight.py  rate_limit.py  requirements.txt  run.py  session.py  skill_orchestration.py  telegram_bot.py  tool_executors.py
bot/channels/: __init__.py  base.py  bus.py  feishu.py  manager.py  middleware.py  telegram.py
bot/commands/: _registry.py  builtins.py
bot/data/: memory.db-shm  memory.db-wal
bot/memory/: __init__.py  encryption.py  models.py  store.py
bot/tests/: test_tools.py
docs/: 2026-05-09-memory-refactor-plan.md  CONTEXT.md  INSTALLATION.md  LLM_ROUTING_GUIDE.md  MEMORY_SYSTEM.md  METHODS.md  R-DEPENDENCIES.md  SKILL-OPTIMIZATION-TEMPLATE.md  architecture-analysis.md  architecture.md  claude-code-engineering-capability-expansion-plan.md  knowledge-system-optimization-plan.md  product-overview.md  remote-connection-guide.md  research_pipeline_analysis.md  skill-architecture.md  stage_control_usage.md
docs/_legacy/: INSTALLATION.md  README.md  remote-connection-guide.md  skill-architecture.md
docs/adr/: 0003-message-bus-decision.md  0003-skill-template-is-human-copy-only.md
docs/architecture/: orchestrator.mdx  overview.mdx  skill-system.mdx
docs/domains/: bulkrna.mdx  genomics.mdx  metabolomics.mdx  orchestrator.mdx  proteomics.mdx  singlecell.mdx  spatial.mdx
docs/ecosystem/: chat-bot.mdx  omicsclaw-app.mdx
docs/engineering/: 2026-05-07-alias-ownership-contract.md  2026-05-07-bot-runner-contract.md  2026-05-07-framework-optimization-spec.md  2026-05-07-literature-skill-registration-spec.md  2026-05-07-output-ownership-contract.md  2026-05-07-skill-help-contract.md  2026-05-07-skill-runner-contract.md  2026-05-11-adr-inject-gotchas-into-runtime-context.md  2026-05-11-adr-negative-routing-eval-from-skip-when.md  2026-05-11-adr-skill-md-description-as-single-source-of-truth.md  domain-input-contracts.md  memory.mdx  remote-execution.mdx  replot.mdx  session-state-inventory.md
docs/introduction/: quickstart.mdx  what-is-omicsclaw.mdx  why-omicsclaw.mdx
docs/safety/: data-privacy.mdx  rules-and-disclaimer.mdx
docs/superpowers/: README.md
environments/: banksy.yml
examples/: demo_bulkrna_batch_expr.csv  demo_bulkrna_batch_info.csv  demo_bulkrna_ensembl_counts.csv  demo_bulkrna_ppi_genes.csv  demo_bulkrna_survival_clinical.csv  demo_bulkrna_survival_expr.csv  demo_metabolomics.csv  demo_proteomics.csv  demo_visium.h5ad
graphify-out/: GRAPH_REPORT.md
knowledge_base/: INDEX.md
knowledge_base/knowhows/: KH-bulk-rnaseq-differential-expression.md  KH-de-padj-guardrails.md  KH-sc-ambient-removal-guardrails.md  KH-sc-batch-integration-guardrails.md  KH-sc-cell-annotation-guardrails.md  KH-sc-cell-communication-guardrails.md  KH-sc-clustering-guardrails.md  KH-sc-de-guardrails.md  KH-sc-doublet-detection-guardrails.md  KH-sc-filter-guardrails.md  KH-sc-grn-guardrails.md  KH-sc-markers-guardrails.md  KH-sc-perturb-guardrails.md  KH-sc-pseudotime-guardrails.md  KH-sc-velocity-guardrails.md
nature_new_insight2/: .pipeline_checkpoint.json  neighborhood_enrichment_zscores.csv  plan.md  research_request.md  todos.md
nature_new_insight2/paper/: 01_abstract_conclusion.md  02_methodology.md  03_results_figs.md  04_fulltext.md
omicsclaw/: __init__.py  __main__.py  cli.py  diagnostics.py  version.py
omicsclaw/agents/: backends.py  config.yaml  intake.py  notebook_session.py  pipeline.py  prompts.py  tools.py
pipelines/: spatial-pipeline.yaml
scripts/: audit_conda_availability.py  check_description_drift.py  check_routing_budget.py  create_demo_data.py  download_all_demos.py  download_demo.py  extract_skip_when_cases.py  generate_catalog.py  generate_demo_data.py  generate_domain_index.py  generate_orchestrator_counts.py  generate_parameters_md.py  generate_routing_table.py  measure_routing_tokens.py  measure_system_prompt.py  measure_tool_list.py  migrate_dry_run.py  migrate_skill.py  migrate_skill_metadata.py  run_eval.py  skill_lint.py  smoke_test_setup.sh  sync_skill_docs.py  validate_skills.py
skills/: catalog.json
templates/: 01.SKILL-OPTIMIZATION.md  02.PLOT-SKILL-OPTIMIZATION-post.md  SKILL-TEMPLATE.md
tests/: test_agents.py  test_app_attachments.py  test_app_server.py  test_app_server_oauth.py  test_async_subprocess_driver.py  test_auto_routing_disambiguation.py  test_autoagent_api.py  test_autoagent_cli.py  test_autoagent_constants.py  test_autoagent_edit_surface.py  test_autoagent_errors.py  test_autoagent_harness_integration.py  test_autoagent_harness_loop.py  test_autoagent_judge.py  test_autoagent_llm_client.py  test_autoagent_llm_client_deepseek.py  test_autoagent_runtime.py  test_autoagent_stage1.py  test_bot_agent_loop_imports.py  test_bot_batch_key_preflight.py  test_bot_completion_messages.py  test_bot_core_import_behavior.py  test_bot_core_timeout.py  test_bot_n_epochs_routing.py  test_bot_run.py  test_bot_runner_contract.py  test_capability_resolver.py  test_capability_resolver_golden.py  test_ccproxy_manager.py  test_channels.py  test_compact_boundary.py  test_compact_slash_command.py  test_compaction_event.py  test_compaction_tool_call_rendering.py  test_context_assembler.py  test_context_layer_predicate.py  test_diagnostics.py  test_documentation_facts.py  test_domain_input_contracts.py  test_engineering_contract_docs.py  (+120 more)
tools/: README.md
website/: package-lock.json  package.json
(+1126 files in other folders)
