[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omicsclaw"
version = "0.1.0"
description = "OmicsClaw: Multi-omics analysis platform with 350+ skills across spatial, single-cell, genomics, proteomics, and metabolomics domains"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OmicsClaw Team"}
]
keywords = [
    "multi-omics",
    "spatial-transcriptomics",
    "single-cell",
    "genomics",
    "proteomics",
    "metabolomics",
    "bioinformatics",
    "scanpy",
    "squidpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11,<3.14"

# --------------------------------------------------------------------------- #
# Tier 1: Core — always installed via `pip install -e .`                      #
# Covers all 16 skills in fallback/built-in mode (no optional deps needed).   #
# --------------------------------------------------------------------------- #
dependencies = [
    # ========== Single-cell / spatial core ==========
    "scanpy>=1.9.0,<2.0",
    "anndata>=0.11.0",
    "squidpy>=1.2.0",

    # ========== Data science ==========
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.3",

    # ========== Clustering & graph ==========
    "igraph>=0.9.0",
    "leidenalg>=0.8.0",

    # ========== Dimensionality reduction ==========
    "umap-learn>=0.5.0",

    # ========== Visualization ==========
    "matplotlib>=3.7",
    "seaborn>=0.11.0",
    "Pillow>=8.0.0",

    # ========== Data validation ==========
    "pydantic>=2.0.0,<3.0",

    # ========== HVG seurat_v3 flavor ==========
    "scikit-misc>=0.5.0",

    # ========== pkg_resources fallback for older packages ==========
    "setuptools>=42",
]

[project.optional-dependencies]
# --------------------------------------------------------------------------- #
# Tier 2: spatial-domains — adds deep learning spatial domain methods.        #
# Isolated because SpaGCN depends on louvain (macOS/Clang compilation issues).#
# On install failure, skills/spatial-domains falls back to Leiden clustering. #
# --------------------------------------------------------------------------- #
spatial-domains = [
    "SpaGCN>=1.2.5,<2.0",
    "torch>=2.0.0,<3.0",
]

# --------------------------------------------------------------------------- #
# Tier 3: full — all 50+ optional analysis methods                            #
# Enables every method in all 16 skills (no built-in fallbacks needed).       #
# --------------------------------------------------------------------------- #
full = [
    # --- Deep learning backend ---
    "torch>=2.0.0,<3.0",
    "scvi-tools>=1.0.0,<2.0",        # Cell2Location, scANVI, VeloVI, scVI

    # --- Spatial domain methods ---
    "GraphST>=1.1.0",                 # spatial-domains: GraphST method
    "SpaGCN>=1.2.5,<2.0",            # spatial-domains: SpaGCN method
    "torch_geometric",                # spatial-domains: STAGATE dependency
    # STAGATE_pyG is not on PyPI — install from source before pip install -e ".[full]":
    #   git clone https://github.com/QIFEIDKN/STAGATE_pyG.git
    #   cd STAGATE_pyG && python setup.py install
    # Also requires PyG sparse extensions matching your torch+CUDA version:
    #   pip install torch_sparse torch_scatter torch_cluster \
    #     -f https://data.pyg.org/whl/torch-<VERSION>+<CUDA>.html

    # --- Cell type annotation ---
    "tangram-sc>=1.0.0",              # spatial-annotate: Tangram method
                                      # also used by spatial-deconv

    # --- Deconvolution ---
    "cell2location>=0.1.4",           # spatial-deconv: Cell2Location method
    "flashdeconv>=0.1.0",             # spatial-deconv: FlashDeconv method

    # --- RNA velocity ---
    "scvelo>=0.2.5",                  # spatial-velocity: scVelo

    # --- Cell-cell communication ---
    "liana",                          # spatial-communication: LIANA+ method
    "cellphonedb>=5.0.0,<6.0",        # spatial-communication: CellPhoneDB
    "fastccc>=0.1.0",                 # spatial-communication: FastCCC (requires Python >=3.11)

    # --- Trajectory inference ---
    "cellrank>=2.0.0,<3.0",           # spatial-trajectory: CellRank
    "palantir>=1.0.0",                # spatial-trajectory: Palantir

    # --- Pathway enrichment ---
    "gseapy>=1.0.0",                  # spatial-enrichment: GSEA/Enrichr/ssGSEA

    # --- Spatially variable genes ---
    "SpatialDE>=1.1.3",               # spatial-genes: SpatialDE method (PyPI: SpatialDE)

    # --- Spatial statistics ---
    "esda>=2.4.0",                    # spatial-statistics: local Moran, Geary
    "libpysal>=4.6.0",                # spatial-statistics: spatial weights
    "pysal>=2.6.0",                   # spatial-statistics: extended analysis

    # --- Copy number variation ---
    "infercnvpy>=0.4.0",              # spatial-cnv: inferCNVpy

    # --- Multi-sample integration ---
    "harmonypy>=0.0.9",               # spatial-integrate: Harmony
    "bbknn>=1.5.0",                   # spatial-integrate: BBKNN
    "scanorama>=1.7.0",               # spatial-integrate: Scanorama

    # --- Spatial registration ---
    "POT>=0.9.0",                     # spatial-register: optimal transport
    "paste-bio>=1.0.0",               # spatial-register: PASTE

    # --- Condition comparison / pseudobulk DESeq2 ---
    "pydeseq2>=0.4.0",                # spatial-condition: PyDESeq2
                                      # also used by spatial-de pseudobulk mode

    # --- R interface (RCTD, SPOTlight, Numbat) ---
    # Requires: conda install -c conda-forge r-base>=4.4
    # Note: pin rpy2 to <3.7 to stay compatible with R 4.4.x (rpy2 3.6+ needs R 4.5)
    "rpy2>=3.5.0,<3.7",
    "anndata2ri>=1.3.0",              # sparse matrix bridge for R methods
]

# --------------------------------------------------------------------------- #
# Tier 3b: banksy — isolated because pybanksy requires numpy<2.0, which       #
# conflicts with pydeseq2, jax, and other packages in the full tier.          #
# Install in a separate environment or before installing full.                #
# --------------------------------------------------------------------------- #
banksy = [
    # pybanksy requires numpy<2.0 — incompatible with full tier (numpy>=2.0)
    # Use a dedicated environment: python3.11 -m venv .venv-banksy
    "pybanksy>=1.3.0",
]

# --------------------------------------------------------------------------- #
# Tier 4: memory — persistent bot conversation context (optional)             #
# --------------------------------------------------------------------------- #
memory = [
    "aiosqlite>=0.19.0",
    "cryptography>=41.0.0",
]

# --------------------------------------------------------------------------- #
# Tier 5: dev — development and testing tools                                 #
# --------------------------------------------------------------------------- #
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=22.0.0,<26.0",
    "mypy>=1.0.0,<2.0",
    "ruff>=0.1.0",
    "isort>=5.0.0",
    "pre-commit>=3.0.0,<5.0",
]

[project.urls]
Homepage = "https://github.com/OmicsClaw/OmicsClaw"
Repository = "https://github.com/OmicsClaw/OmicsClaw"

[project.scripts]
omicsclaw = "omicsclaw.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --import-mode=importlib -m 'not slow'"
testpaths = [
    "skills/spatial-preprocess/tests",
    "skills/spatial-domains/tests",
    "skills/spatial-de/tests",
    "skills/spatial-genes/tests",
    "skills/spatial-statistics/tests",
    "skills/spatial-annotate/tests",
    "skills/spatial-deconv/tests",
    "skills/spatial-communication/tests",
    "skills/spatial-condition/tests",
    "skills/spatial-velocity/tests",
    "skills/spatial-trajectory/tests",
    "skills/spatial-enrichment/tests",
    "skills/spatial-cnv/tests",
    "skills/spatial-integrate/tests",
    "skills/spatial-register/tests",
    "skills/spatial-orchestrator/tests",
]
markers = [
    "slow: tests requiring full optional deps or significant runtime (excluded by default)",
    "requires_torch: tests requiring PyTorch (SpaGCN, Cell2Location, scVI)",
    "requires_r: tests requiring R + rpy2 (RCTD, SPOTlight, Numbat)",
    "demo: demo-mode integration tests",
]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::UserWarning:anndata",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | output
  | sessions
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["omicsclaw", "omicsclaw.*"]
exclude = ["tests", "tests.*", "output", "sessions"]

[tool.setuptools.package-data]
omicsclaw = ["py.typed"]
